# bn

./: .travis.yml  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md
benches/: api.rs  fp.rs
examples/: agg.rs  agg_sigs.rs  bench_pairing.rs  bls.rs  bls_sigs.rs  dh.rs  ibe.rs  joux.rs  sighash.rs
oldexamples/: dh.rs  joux.rs
oldsrc/: lib.rs
oldsrc/fields/: fp.rs  fp12.rs  fp6.rs
oldsrc/groups/: gt.rs  mod.rs
shootout/: README.md  main.rs  test.cpp
src/: arith.rs  fp.rs  lib.rs  macros.rs  params.rs
src/arith/: mod.rs  primitives.rs
src/fields/: fp.rs  fp12.rs  fp2.rs  fp6.rs  fq12.rs  fq2.rs  fq6.rs  mod.rs  tests.rs
src/groups/: gt.rs  macros.rs  mod.rs  tests.rs
tests/: fp2_vectors.rs  fp_vectors.rs  g1_g2_vectors.rs  serialization.rs
