[package]
name = "bn"
version = "0.2.0"
authors = ["Sean Bowe <ewillbefull@gmail.com>"]
description = "Pairing cryptography with the Barreto-Naehrig curve"
keywords = ["pairing","crypto","cryptography"]
readme = "README.md"
homepage = "https://github.com/zcash/bn"
repository = "https://github.com/zcash/bn"
license = "MIT OR Apache-2.0"

[[bench]]
name = "api"

[dependencies]
rand = "0.3.14"
rustc-serialize = "0.3"
byteorder = "0.5"

[dev-dependencies.bincode]
version = "0.6.0"
default-features = false
features = ["rustc-serialize"]
